- Will retry to enroll if the server return a 429. {pull-beats}[19811]
- Add --staging option to enroll command {pull-beats}[20026]
- Add `event.dataset` to all events {pull-beats}[20076]
- Send datastreams fields {pull-beats}[20416]
- Agent supports capabilities definition {pull-beats}[23848]
- Restart process on output change {pull-beats}[24907]

=== Docs

- Minor updates on README.md for pre-requisities of build process

[[release-notes-7.8.0]]
=== Elastic Agent version 7.8.0

==== Breaking changes
- Rename agent to elastic-agent {pull-beats}[17391]

==== Bugfixes

- Fixed tests on windows {pull-beats}[16922]
- Fixed installers for SNAPSHOTs and windows {pull-beats}[17077]
- Fixed merge of config {pull-beats}[17399]
- Handle abs paths on windows correctly {pull-beats}[17461]
- Improved cancellation of agent {pull-beats}[17318]
- Fixed process spawning on Windows {pull-beats}[17751]
- Fix issues when running `mage package` for all the platforms. {pull-beats}[17767]
- Rename the User-Agent string from Beats Agent to Elastic Agent. {pull-beats}[17765]
- Remove the kbn-version on each request to the Kibana API. {pull-beats}[17764]
- Fixed injected log path to monitoring beat {pull-beats}[17833]
- Make sure that the Elastic Agent connect over TLS in cloud. {pull-beats}[17843]
- Moved stream.* fields to top of event {pull-beats}[17858]
- Use /tmp for default monitoring endpoint location for libbeat {pull-beats}[18131]
- Use default output by default {pull-beats}[18091]
- Fix panic and flaky tests for the Agent. {pull-beats}[18135]
- Fix default configuration after enroll {pull-beats}[18232]
- Fix make sure the collected logs or metrics include streams information. {pull-beats}[18261]
- Fix version to 7.8 {pull-beats}[18286]
- Fix an issue where the checkin_frequency, jitter, and backoff options where not configurable. {pull-beats}[17843]
- Ensure that the beats uses the params prefer_v2_templates on bulk request. {pull-beats}[18318]