@@ -20,6 +20,12 @@ const packageSpecFile = "dev-tools/packaging/packages.yml"
 // executed.
 var Packages []OSPackageArgs
 
+// UseElasticAgentBinaryPackaging configures the package target to build binary packages
+// for an Elastic Agent.
+func UseElasticAgentBinaryPackaging() {
+	MustUsePackaging("elastic_agent_binary", packageSpecFile)
+}
+
 // UseCommunityBeatPackaging configures the package target to build packages for
 // a community Beat.
 func UseCommunityBeatPackaging() {
